Using immutable structure for Article class