@@ -4,6 +4,7 @@ import org.assertj.core.api.ThrowingConsumer;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
+import java.time.LocalDate;
 import java.util.function.Function;
 
 import static blog.ArticleBuilder.*;
@@ -12,15 +13,15 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.instancio.Instancio.create;
 
 class ArticleTests {
-    private Article article;
 
     @Test
     void should_add_comment_in_an_article() throws CommentAlreadyExistException {
-        when(article -> article.addComment(COMMENT_TEXT, AUTHOR));
-        then(article -> {
-            assertThat(article.getComments()).hasSize(1);
-            assertComment(article.getComments().get(0), COMMENT_TEXT, AUTHOR);
-        });
+        var article = anArticle()
+                        .commented()
+                        .build();
+
+        assertThat(article.getComments()).hasSize(1);
+        assertComment(article.getComments().getFirst(), COMMENT_TEXT, AUTHOR);
     }
 
     @Test
@@ -28,11 +29,40 @@ class ArticleTests {
         final var newComment = create(String.class);
         final var newAuthor = create(String.class);
 
-        when(ArticleBuilder::commented, article -> article.addComment(newComment, newAuthor));
-        then(article -> {
-            assertThat(article.getComments()).hasSize(2);
-            assertComment(article.getComments().getLast(), newComment, newAuthor);
-        });
+        var article = anArticle()
+                        .commented()
+                        .build();
+
+        article = article.addComment(newComment, newAuthor);
+
+        assertThat(article.getComments()).hasSize(2);
+        assertComment(article.getComments().getLast(), newComment, newAuthor);
+    }
+
+    @Test
+    void should_add_comment_in_an_article_leaves_object_unchanged() throws Throwable {
+        final var newComment = create(String.class);
+        final var newAuthor = create(String.class);
+
+        var article = anArticle()
+                .commented()
+                .build();
+
+        var a2 = article.addComment(newComment, newAuthor);
+
+        assertThat(article.getComments()).hasSize(1);
+        assertComment(article.getComments().getLast(), COMMENT_TEXT, AUTHOR);
+    }
+
+    @Test
+    void should_have_immutable_comments_list() throws CommentAlreadyExistException {
+        var article = anArticle()
+                .commented()
+                .build();
+
+        assertThatThrownBy(() -> {
+            article.getComments().add(new Comment("foo", "bar", LocalDate.now()));
+        }).isInstanceOf(UnsupportedOperationException.class);
     }
 
     @Nested
@@ -44,7 +74,7 @@ class ArticleTests {
                     .build();
 
             assertThatThrownBy(() -> {
-                article.addComment(article.getComments().get(0).text(), article.getComments().get(0).author());
+                article.addComment(article.getComments().getFirst().text(), article.getComments().getFirst().author());
             }).isInstanceOf(CommentAlreadyExistException.class);
         }
     }
@@ -52,22 +82,5 @@ class ArticleTests {
     private static void assertComment(Comment comment, String commentText, String author) {
         assertThat(comment.text()).isEqualTo(commentText);
         assertThat(comment.author()).isEqualTo(author);
-    }
-
-    private void when(ArticleBuilder articleBuilder, ThrowingConsumer<Article> act) throws CommentAlreadyExistException {
-        article = articleBuilder.build();
-        act.accept(article);
-    }
-
-    private void when(ThrowingConsumer<Article> act) throws CommentAlreadyExistException {
-        when(anArticle(), act);
-    }
-
-    private void when(Function<ArticleBuilder, ArticleBuilder> options, ThrowingConsumer<Article> act) throws Throwable {
-        when(options.apply(anArticle()), act);
-    }
-
-    private void then(ThrowingConsumer<Article> act) {
-        act.accept(article);
     }
 }
